--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,15 @@ body {
 	box-sizing: border-box;
 }
 
+.trigger_text-wrapper {
+	display: flex;
+}
+
+.trigger_text {
+	color: white;
+	margin-right: 1rem;
+}
+
 #root {
 	position: relative;
 	height: 900vh;
