--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,101 @@ body {
 	height: 900vh;
 	background-color: #030303;
 }
+.trigger_text-wrapper {
+	display: flex;
+	grid-column-gap: 1rem;
+}
+.trigger_text {
+	color: white;
+	min-width: 240px;
+	letter-spacing: -.03125rem;
+	font-size: 1.25rem;
+	font-weight: 600;
+	line-height: 118%;
+}
+.trigger_text.order {
+	order: 2;
+}
+.trigger_text.is-big {
+	min-width: 19rem;
+}
+
+.trigger_text.is-small {
+	min-width: 160px;
+}
+
+.text-color-gray {
+	color: #8a8a8a;
+}
+
+.trigger_icon {
+	margin-top: 1.52222vw;
+}
+
+.trigger_text-wrapper.is-v2 {
+	flex-direction: column;
+	gap: 1.56rem;
+	text-align: center;
+}
+
+.trigger_text-wrapper.is-v3,
+.trigger_text-wrapper.is-v4,
+.trigger_text-wrapper.is-v5,
+.trigger_text-wrapper.is-v6{
+	align-items: flex-end;
+}
+
+@media  screen and (max-width: 1024px) {
+	.trigger_text-wrapper {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.trigger_text-wrapper.is-v3 {
+		align-items: center;
+	}
+
+	.trigger_text-wrapper.is-v4 {
+		align-items: flex-start;
+	}
+
+	.trigger_text-wrapper.is-v5 {
+		align-items: flex-end;
+	}
+
+	.trigger_text-wrapper.is-v5 .trigger_text {
+		min-width: 14rem;
+		margin-top: 1rem;
+		order: 1;
+	}
+
+	.trigger_text-wrapper.is-v7 {
+		align-items: flex-start;
+	}
+}
+
+@media screen and (max-width: 769px) {
+	.trigger_text {
+		font-size: 1rem;
+		line-height: 115%;
+	}
+
+	.trigger_text-wrapper.is-v5 .trigger_text {
+		min-width: 10rem;
+	}
+	.trigger_text-wrapper.is-v6 {
+		max-width: 6rem;
+	}
+
+	.trigger_text-wrapper.is-v6 .trigger_text {
+		min-width: 8rem;
+	}
+
+	.trigger_text.is-big {
+		min-width: 14rem;
+	}
+}
+
 
 .canvas-container {
 	position: sticky !important;
