--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,12 @@ body {
 	position: sticky !important;
 	top: 0 !important;
 	height: 100vh;
+	pointer-events: none;
+}
+
+#root,
+canvas{
+	pointer-events: none;
 }
 
 #trigger1,
