--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body {
 	order: 2;
 }
 .trigger_text.is-big {
-	min-width: 19rem;
+	min-width: 30vh;
 }
 
 .trigger_text.is-small {
@@ -201,6 +201,7 @@ canvas{
 }
 
 #trigger8 {
+	top: 700vh;
 	top: 700vh;
 }
 
